# pixiserve

./: .gitignore  AGENTS.md  README.md  sprint-1.md
backend/: .env.example  pyproject.toml
backend/alembic/versions/: 002_add_clerk_user_id.py  003_add_search_trgm_indexes.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: albums.py  assets.py  auth.py  router.py  search.py  shared.py  webhooks.py
backend/app/models/: user.py
backend/app/schemas/: asset.py  auth.py
backend/app/services/: asset_service.py  auth_service.py  clerk_jwt.py  clerk_webhook_sync.py  share_link_password.py
backend/app/workers/tasks/: ml_pipeline.py
backend/tests/: conftest.py  test_asset_quota.py  test_clerk_jwt.py  test_clerk_webhook.py  test_clerk_webhook_sync.py  test_local_auth_gate.py  test_search_trigram.py  test_share_link_password.py  test_thumbnail_pipeline.py
deploy/: .env.example  docker-compose.yml
mobile/: .env.example  package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx  login.tsx  setup.tsx
mobile/app/(tabs)/: albums.tsx  index.tsx  people.tsx  search.tsx  settings.tsx
mobile/app/asset/: [id].tsx
mobile/src/components/: ClerkApiBridge.tsx
mobile/src/hooks/: useSignedAssetFileUrl.ts
mobile/src/services/: api.ts  clerkApiBridge.ts  syncService.ts
mobile/src/stores/: authStore.ts
pinion-sprints/: sprint-1.md
pinion-sprints/artifacts/sprint-1/: execution_log.md  metrics.json  task.md
web/: .env.example  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/api/: authBridge.ts  client.ts
web/src/hooks/: useMediaUrl.ts
(+8 files in other folders)
